Fixed switch alignment issues, and added a badge for notifications

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -1,5 +1,3 @@
-@import 'variables';
-
 // --------------------------------------------------------------
 // Navigation Bar SCSS.
 // --------------------------------------------------------------
@@ -87,8 +85,15 @@
         justify-content: space-between;
         align-items: center;
         margin-right: 24px;
+        * {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
         #notification-img {
             cursor: pointer;
+            height: 21px;
         }
     }
     #tool-bar-profile {
@@ -130,26 +135,25 @@
     }
 }
 
-// .ant-switch-checked .anticon {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//   }
-
-//   .ant-switch .anticon {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//   }
-
 .ant-switch-inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 16px !important;
 }
 
-.ant-switch-inner-checked,
-.ant-switch-inner-unchecked {
-    height: 16px !important;
+.ant-switch-checked .anticon,
+.ant-switch .anticon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
 }
+
+.ant-switch .anticon svg {
+    vertical-align: middle;
+}
+
 // --------------------------------------------------------------
 // Action Bar SCSS.
 // --------------------------------------------------------------
